--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^2.3.3",
-    "pg": "^8.2.1"
+    "pg": "^8.2.1",
+    "sequelize": "^6.3.0"
   }
 }
